--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ if(/Android (\d+\.\d+)/.test(navigator.userAgent)){
 </script>
 </head>
 <body>
-<!--横屏提示-->
+<!--横屏提示123-->
 <div id="lock" class="lock_wrp hide">
     <div class="lock">
         <i></i><br>
